Tweaked the sidebar style to prevent them image from being cut off

--- a/css/instruments.css
+++ b/css/instruments.css
@@ -66,7 +66,7 @@
 {
   position:relative;
   clear:right;
-  margin-bottom:25px;
+  margin:10px 0px;
   width:250px;
   border:none;
   background-color:gray;
